@@ -10,7 +10,9 @@
    - Added metadata controller tests (margaretha)
 18/02/2019
    - Fixed tests (margaretha)
-   - Updated handling errors from Koral (margaretha)  
+   - Updated handling errors from Koral (margaretha)
+19/02/2019
+   - Added fields to metadata controller (margaretha, issue #39)
 
 # version 0.61.5
 17/12/2018
