@@ -5,6 +5,8 @@
    - Updated search krill error handling (margaretha)
 18/02/2019
    - Updated handling errors from Koral (margaretha)
+19/02/2019
+   - Added fields to metadata controller (margaretha, issue #39)   
 
 # version 0.61.5
 17/12/2018
